--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <div id="view"></div>
 
 <div id="start" class="scene">
-    <pre>CBシミュレータを開始したことをFacebookに投稿しますか？（１．はい　２．いいえ）
+    <pre>開始したことをFacebookに投稿しますか？（１．はい　２．いいえ）
     ※ポップアップブロックを解除してください。</pre>
 </div>
 
 <div id="cb" class="scene">
-    <pre>チャンネルを選択してください。</pre>
+    <pre>Cを選択してください。</pre>
 </div>
 
 
